--- a/src/main/webapp/WEB-INF/templates/archive.html
+++ b/src/main/webapp/WEB-INF/templates/archive.html
@@ -134,7 +134,7 @@
 							 					</a>
 											</span>
 											
-											<div class="dropdown inline">
+											<span class="dropdown inline">
 												<span class="btn dropdown-toggle" id="menu1" data-toggle="dropdown">
 													<img th:src="@{/image/more-vert.svg}" height="18px" /> 
 												</span>
@@ -145,7 +145,7 @@
 													<li><a th:href="${'copy/' + note.noteId}">Make a Copy</a></li>
 													<li><a>Social Share</a></li>
 												</ul>
-											</div>
+											</span>
 											
 										</div>
 									</div>
